--- a/static/package.json
+++ b/static/package.json
@@ -6,11 +6,10 @@
   "dependencies": {
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
-    "google-tts-api": "0.0.4",
     "jquery": "^3.5.0",
-    "local-cors-proxy": "^1.1.0",
     "materialize-css": "^1.0.0",
     "socket.io-client": "^2.3.0",
+    "speak-tts": "^2.0.8",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.43.0",
