--- a/static/package.json
+++ b/static/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "build": "webpack -p --progress --config webpack.config.js",
+    "build": "webpack --progress -d --config webpack.config.js",
     "dev-build": "webpack --progress -d --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --progress -d --config webpack.config.js --watch",
